# agentpenny

./: .pre-commit-config.yaml  N8N_README.md  README.md  pyproject.toml
.devcontainer/: devcontainer.json
agent_penny/: main.py
