[project]
name = "agentpenny"
version = "0.1.0"
description = "Penny Stock Agentic AI"

license = {text = "MIT License"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.5,<3.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
