[project]
name = "agentpenny"
version = "0.1.0"
description = "Penny Stock Agentic AI"

license = {text = "MIT License"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.5,<3.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=25.11.0,<26.0.0)",
    "pre-commit (>=4.4.0,<5.0.0)",
    "isort (>=7.0.0,<8.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "pytest (>=9.0.0,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)"
]

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 120
ignore = ["E203", "E266", "E501", "W503"]
exclude = [".git", "__pycache__", "build", "dist"]

[project.scripts]
agentpenny = "agentpenny.main:run"

[tool.poetry.group.test.dependencies]
pytest = ">=9.0.0,<10.0.0"
